--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^20.10.3",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "dotenv-cli": "^5.1.0",
@@ -82,6 +83,7 @@
     "jsonwebtoken": "^8.5.1",
     "qs": "^6.11.2",
     "query-string": "^7.1.1",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^5.0.0"
   }
 }
