--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "rootDirs": ["src", "tests"],
     "plugins": [
       {
